--- a/app/src/main/res/layout/modelogames.xml
+++ b/app/src/main/res/layout/modelogames.xml
@@ -1,27 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/idCardGames"
+    android:layout_width="150dp"
+    android:layout_height="230dp"
+    android:clickable="true"
+    app:cardCornerRadius="10dp">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="#DA9494"
-    android:clickable="true"
     android:orientation="vertical"
-    >
+    android:layout_margin="5dp"
 
+    >
     <ImageView
+
+        android:scaleType="centerCrop"
         android:id="@+id/idImgGames"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
         android:src="@drawable/godofwar"
 
         />
 
     <TextView
+        android:textSize="10dp"
+        android:textColor="#000"
+        android:textStyle="bold"
         android:id="@+id/idTituloGame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nome Game"
+        android:text="God of War"
         android:layout_gravity="center_horizontal"
         />
-
+</LinearLayout>
 </androidx.cardview.widget.CardView>
