--- a/app/src/main/res/layout/apresenta_games_layout.xml
+++ b/app/src/main/res/layout/apresenta_games_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ApresentarFilmeActivity">
+    tools:context=".ApresentaGamesActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -52,10 +52,11 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/baseline_people" />
 
-                <EditText
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=": 2"/>
+                    android:text=": 2"
+                    />
 
             </LinearLayout>
 
