--- a/app/src/main/res/layout/apresenta_games_layout.xml
+++ b/app/src/main/res/layout/apresenta_games_layout.xml
@@ -25,12 +25,14 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/idTituloView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="Tiulo"
             android:textSize="35dp" />
 
         <TextView
+            android:id="@+id/idDescricao"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="Descricao"
@@ -51,11 +53,69 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/baseline_people" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Jogadores: "
+                    />
+
+                <TextView
+                    android:id="@+id/idJogadores"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="2"
+                    />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/baseline_attach_money" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=": 2"
+                    android:text="Preço: "
+                    />
+
+                <TextView
+                    android:id="@+id/idPreco"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=":R$100,00"
+                    />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/baseline_query_stats" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Nota: "
+                    />
+
+                <TextView
+                    android:id="@+id/idNota"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="80"
                     />
 
             </LinearLayout>
